crab/src/tier/provider/snapshots/crab__tier__provider__azure__tests__azure_basic_cool_transition.snap
---
source: crab/src/tier/provider/azure.rs
expression: json
---
{
  "rules": [
    {
      "enabled": true,
      "name": "crab-xorbs-to-cool",
      "type": "Lifecycle",
      "definition": {
        "actions": {
          "baseBlob": {
            "tierToCool": {
              "daysAfterModificationGreaterThan": 30
            }
          }
        },
        "filters": {
          "blobTypes": [
            "blockBlob"
          ],
          "prefixMatch": [
            ".crab/xorbs/"
          ]
        }
      }
    }
  ]
}
