crab/src/tier/provider/snapshots/crab__tier__provider__azure__tests__azure_multiple_transitions.snap
---
source: crab/src/tier/provider/azure.rs
expression: json
---
{
  "rules": [
    {
      "enabled": true,
      "name": "crab-xorbs-to-cool",
      "type": "Lifecycle",
      "definition": {
        "actions": {
          "baseBlob": {
            "tierToCool": {
              "daysAfterModificationGreaterThan": 30
            }
          }
        },
        "filters": {
          "blobTypes": [
            "blockBlob"
          ],
          "prefixMatch": [
            ".crab/xorbs/"
          ]
        }
      }
    },
    {
      "enabled": true,
      "name": "crab-xorbs-to-archive",
      "type": "Lifecycle",
      "definition": {
        "actions": {
          "baseBlob": {
            "tierToArchive": {
              "daysAfterModificationGreaterThan": 180
            }
          }
        },
        "filters": {
          "blobTypes": [
            "blockBlob"
          ],
          "prefixMatch": [
            ".crab/xorbs/"
          ]
        }
      }
    }
  ]
}
